# wails

./: go.mod  go.sum
cmd/: cmd-mewn.go  helpers.go  project.go
cmd/wails/: 3_generate.go  4_build.go  6_serve.go
internal/app/: default.go  server.go
internal/binding/: binding.go
internal/ffenestri/: ffenestri.h  ffenestri_client.go  ffenestri_linux.c
internal/fs/: fs.go
internal/messagedispatcher/: dispatchclient.go
internal/messagedispatcher/message/: window.go
internal/runtime/goruntime/: dialog.go  events.go  runtime.go  window.go
internal/servicebus/: servicebus.go
internal/subsystem/: call.go  runtime.go
internal/system/: system.go
internal/system/packagemanager/: apt.go  emerge.go  packagemanager.go  pacman.go  zypper.go
internal/webserver/: webassets.go  webserver.go
lib/renderer/bridge/: bridge.go  session.go
lib/renderer/webview/: memory.go  webview.go  webview.h  webview_darwin.go  webview_darwin.h  webview_linux.go  webview_linux.h  webview_windows.go  webview_windows.h
lib/stores/: generate.go  parse.go
runtime/assets/: bridge.js
runtime/js/core/: events.js
test/disable-resize/: basic.go
test/frameless/: main.go
test/runtime/: runtime.go
v2/: go.mod  go.sum  wails.go
v2/cmd/wails/: main.go
v2/internal/app/: debug.go  default.go  desktop.go  hybrid.go  options.go  server.go
v2/internal/assetdb/: assetdb.go
v2/internal/binding/: binding.go  reflect.go
v2/internal/counter/: counter.go
v2/internal/ffenestri/: LICENCES.md  common.c  common.h  contextmenus_darwin.c  contextmenus_darwin.h  contextmenustore_darwin.c  contextmenustore_darwin.h  features_linux.go  ffenestri.go  ffenestri.h  ffenestri_client.go  ffenestri_darwin.c  ffenestri_darwin.go  ffenestri_darwin.h  menu.c  menu.h  menu_darwin.c  menu_darwin.h  menu_darwin_old.c  menu_darwin_old.h  menu_item.c  menu_manager.c  menu_tray.c  utf8.h  (+5 more)
v2/internal/ffenestri/test_app/: CMakeLists.txt  assets.h  test.c
v2/internal/ffenestri/test_menumanager/: CMakeLists.txt  minunit.h  test.c
(+50 files in other folders)
